-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.6.0
-
None
-
Kubuntu 14.04
-
fec1a78618bae112ff8d1c0e6f078ea890cf283e
I have two Popup items. If I open one popup, close it and open the next in javascript code, the background outside the popup is not changed as it does if I just open a single popup.
The end result for the code example below is that popup2 is shown on the screen, but the window background color is as it is without any popup open.
I'm using the Dark Material style so normally the window background turns light gray.
import QtQuick 2.4 import Qt.labs.controls 1.0 ApplicationWindow { visible: true Popup { id: popup1 modal: true closePolicy: Popup.OnPressOutside Label { text: "popup1" } } Popup { id: popup2 modal: true closePolicy: Popup.OnPressOutside Label { text: "popup2" } } Button { text: "Test" onClicked: { popup1.open() popup1.close() popup2.open() } } }